Revisado background das secoes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "academia-corpus-landing-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fstarck.github.io/LpCorpusAcademias/",
+  "homepage": "https://fstarck.github.io/LpCorpusAcademias2/",
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
